# mai-multi-agent-systems

./: .gitignore  README.md  requirements.txt  requirements.venv.txt
emergency_planner/: pyproject.toml
emergency_planner/src/emergency_planner/: main.py
practical/: .gitignore  Makefile  README.md  TODO.md  crewai_flow.html  pyproject.toml  requirements.txt  setup.cfg
practical/data/inputs/: call_transcripts.txt  lloretDeMar.graphml
practical/data/outputs/: emergency_report.md  emergency_report_2.md  logs1.txt  logs2.txt
practical/notebooks/: 0.1-ZachParent-custom_tools_demo.ipynb  0.2-ZachParent-investigate_maps.ipynb  0.3-ZachParent-2024-10-23_meeting_notes.md  1.0-brunosangom-medical-services.md  1.1-ZachParent-forensics.md  1.2-ZachParent-investigate_team_suggested_maps.ipynb  1.2-alobo01-public-communication.md  1.3-sheenamaria-firefighters.md  1.4-mari-emergency_service_crew  1.4-mari-emergency_service_crew.md  1.5-mari-environment.md  1.6-brunosangom-2024-10-28-meeting-notes.md  2.0-sheenamaria-conclusion.md  2.1-alobo01-meetingnotes.md  3.2-ZachParent-coordination_design_task.md  3.3-ZachParent-2024-12-02.md  3.4-ZachParent-feedback.md  4.1-ZachParent-2024-12-28.md  4.2-brunosangom-2025-01-02.md  4.3-ZachParent-report-org.md  4.4-ZachParent-code-todo.md  4.5-brunosangom-PC-crew-output.md  4.6-alobo01-presentation_structure.md  4.6-sheenamaria-2025-01-10-meeting-notes.md  4.7-alobo01-presentation_structure.md  4.7-brunosangom-2025-01-11-meeting-notes.md  espluga.graphml  tarragona.graphml
practical/reports/: .gitignore
practical/reports/design/: 1-introduction.tex  2-city-selection.tex  2-environment.tex  2-methods.tex  3-agents.tex  design.bbl  (+18 more)
practical/reports/design-presentation/: 1-introduction.tex  4.1-emergency-services.tex  4.2-firefighters.tex  4.3-firefighters.tex  4.3-medical-services.tex  4.4-forensics.tex  4.5-forensics.tex  4.5-public-communications.tex  antoniosScript.html  design-presentation.tex
practical/src/: demo_tool.py  map-analysis.py  template.env
(+160 files in other folders)
