[tool.poetry]
name = "emergency_planner"
version = "0.1.0"
description = "emergency_planner using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.61.0,<1.0.0" }


[tool.poetry.scripts]
emergency_planner = "emergency_planner.main:run"
run_crew = "emergency_planner.main:run"
train = "emergency_planner.main:train"
replay = "emergency_planner.main:replay"
test = "emergency_planner.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
