[project]
name = "emergency_planner"
version = "0.1.0"
description = "emergency_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "osmnx",
    "scikit-learn",
]

[project.scripts]
kickoff = "emergency_planner.main:kickoff"
plot = "emergency_planner.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
